# virst

./: .gitignore  Cargo.toml
src/: displayed_model.rs  egui_integration.rs  main.rs
src/app/: mod.rs
src/app/model/: mod.rs
src/gui/: about.rs  general_settings.rs  mod.rs  tracker.rs
src/gui/model/: manager.rs  mod.rs  tracking_config.rs
src/tracker/: mod.rs  system.rs
