[package]
name = "virst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
bytemuck = "1.14.0"
crossbeam-channel = "0.5.8"
egui = "0.24.1"
egui-wgpu = "0.24.1"
egui-winit = "0.24.1"
glam = "0.24.1"
inox2d = { git = "https://github.com/Inochi2D/inox2d" }
inox2d-wgpu = { git = "https://github.com/Inochi2D/inox2d" }
mahou_vmc = { git = "https://github.com/MahouTechnologies/mahou-vmc.git" }
pollster = "0.3.0"
raw-window-handle = "0.5.2"
rfd = "0.12.0"
rosc = "0.10.1"
simple_moving_average = "0.1.2"
thiserror = "1.0.48"
winit = "0.28.6"
